Names are now truncated with css. Fix #21

--- a/assets/stylesheets/globals/_base.scss
+++ b/assets/stylesheets/globals/_base.scss
@@ -1,3 +1,9 @@
 #container {
   padding-bottom: 60px;
 }
+
+.ellipsis {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
